<resources>
    <string name="app_name" translatable="false">Stym</string>
    <string name="listado_juegos">LISTADO JUEGOS</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="logo_stym">Logo Stym</string>
    <string name="logo_juego">Logo Juego</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="ingresar">INGRESAR</string>
    <string name="detalle_juegos">DETALLE JUEGOS</string>
    <string name="jugadores">Jugadores:</string>
    <string name="compatibilidad">Compatibilidad:</string>
    <string name="genero">Género:</string>
    <string name="idioma">Idioma:</string>
    <string name="clasificacion">Clasificación:</string>
    <string name="volver">VOLVER</string>
    <string name="nombre_usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="agregar">AGREGAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="registrar">REGISTRAR</string>
    <string name="registro">REGISTRO</string>
    <string name="nombre_user">Nombre</string>
    <string name="apellido_user">Apellido</string>
    <string name="guardar">GUARDAR</string>
    <string name="agregar_juego">AGREGAR JUEGO</string>
    <string name="imagen">Imagen</string>
    <string name="jugadores_game">Jugadores</string>
    <string name="compatibilidad_game">Compatibilidad</string>
    <string name="genero_game">Género</string>
    <string name="idioma_game">Idioma</string>
    <string name="clasificacion_game">Clasificación</string>
    <string name="email" translatable="false">Email</string>
    <string name="activo">Activo</string>
</resources>